--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </p>
         <p>Gracias por ver mi porfolio</p>
         <a href="#sobreMi">
-          <img src="/IMG/Iconos/triangulos_Blancos.png" alt="botón para bajar">
+          <img src="./IMG/Iconos/triangulos_Blancos.png" alt="botón para bajar">
         </a>
       </section>
       <picture class="presentacion_contenedorImgenes">
-        <img class="imagen_1" src="/IMG/escritorio-1.jpg" alt="Imagen de un escritorio">
-        <img class="imagen_2" src="/IMG/leo.jpg" alt="Imagen de Leonardo Dillon">
-        <img class="Imagen__Bajar" src="/IMG/Iconos/triangulos.png" alt="bajar a imagen de Leonardo Dillon">
+        <img class="imagen_1" src="./IMG/escritorio-1.jpg" alt="Imagen de un escritorio">
+        <img class="imagen_2" src="./IMG/leo.jpg" alt="Imagen de Leonardo Dillon">
+        <img class="Imagen__Bajar" src="./IMG/Iconos/triangulos.png" alt="bajar a imagen de Leonardo Dillon">
       </picture>
     </div>
   </header>
@@ -54,7 +54,7 @@
             Comencé mís estudios en el año 2022 haciendo el curso de <em>Certified Tech Developer</em> en <em> Digital House</em>, finalizando el curso en ese mismo año. <br> 
             En el año siguiente Comencé a estudiar Ingles en la academia de <em>Platzi</em> y arranque un nuevo <em> curso de Desarrollo y Diseño Web </em>en el intitulo <em>Da Vinci.</em> 
           </p>
-          <img src="/IMG/Iconos/SobreMi_Blanco_Grande.png" alt="Icono Sobre Mi">
+          <img src="./IMG/Iconos/SobreMi_Blanco_Grande.png" alt="Icono Sobre Mi">
         </div>
         <div class="Formacion_carrera">
           <h3> FEB 2011 - DIC 2016</h3>
@@ -62,7 +62,7 @@
             <h4> Colegio Parroquial Padre Ansaldo </h4>
             <p> Bachiller en Humanidades </p>
             <p><Strong>Duración</Strong>: 6 años</p>
-            <div class="triangulo-5"><img src="/IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
+            <div class="triangulo-5"><img src="./IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
           </div>
         </div>
         <div class="Formacion_carrera">
@@ -71,7 +71,7 @@
             <h4> Universidad Tecnológica Nacional </h4>
             <p> Ingeniería Química</p>
             <p><Strong>Duración</Strong>: 2 años y 6 meses</p>
-            <div class="triangulo-5"><img src="/IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
+            <div class="triangulo-5"><img src="./IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
           </div>
         </div>
         <div class="Formacion_carrera">
@@ -80,7 +80,7 @@
             <h4> Universidad Tecnológica Nacional </h4>
             <p> Ingeniería en sistemas de la información</p>
             <p><Strong>Duración</Strong>: 2 años</p>
-            <div class="triangulo-5"><img src="/IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
+            <div class="triangulo-5"><img src="./IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
           </div>
         </div>
         <div class="Formacion_carrera">
@@ -89,7 +89,7 @@
             <h4> Digital House </h4>
             <p> Certified Tech Developer</p>
             <p><Strong>Duración</Strong>: 1 años</p>
-            <div class="triangulo-5"><img src="/IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
+            <div class="triangulo-5"><img src="./IMG/Iconos/graduado.png" alt="Icono de carrera realizada"></div>
           </div>
         </div>
       </article>
@@ -98,7 +98,7 @@
       <h2>Proyectos</h2>
       <article>
         <picture>
-          <img class="proyecto_img" src="/IMG/proyectos/Un_Jardin_Suculento.png" alt="Proyecto Un_Jardin_Suculento">
+          <img class="proyecto_img" src="./IMG/proyectos/Un_Jardin_Suculento.png" alt="Proyecto Un_Jardin_Suculento">
           <div>
             <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyecto">
             <h4>Un jardin suculento</h4>
