--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <nav>
       <ul>
         <li><a href="#sobreMi">
-          <img src="/IMG/Iconos/SobreMi_Blanco.png" alt="Icono Sobre mi">
+          <img src="./IMG/Iconos/SobreMi_Blanco.png" alt="Icono Sobre mi">
           Sobre mí 
         </a></li>
         <li><a href="#proyectos">
-          <img src="/IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyectos">
+          <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyectos">
           Proyectos 
         </a></li>
         <li><a href="#contacto">
-          <img src="/IMG/Iconos/Contactos_Blanco.png" alt="Icono de Contacto">
+          <img src="./IMG/Iconos/Contactos_Blanco.png" alt="Icono de Contacto">
           Contactos 
         </a></li>
       </ul>
@@ -105,35 +105,35 @@
           </div>
         </picture>
         <picture>
-          <img class="proyecto_img" src="/IMG/proyectos/50Day50Proyectos.png" alt="Proyecto 50Day50Proyectos">
+          <img class="proyecto_img" src=".IMG/proyectos/50Day50Proyectos.png" alt="Proyecto 50Day50Proyectos">
           <div>
             <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyecto">
             <h4>50 Day 50 Proyectos</h4>
           </div>
         </picture>
         <picture>
-          <img class="proyecto_img" src="/IMG/proyectos/50Day50Proyectos.png" alt="Proyecto 50Day50Proyectos">
+          <img class="proyecto_img" src="./IMG/proyectos/50Day50Proyectos.png" alt="Proyecto 50Day50Proyectos">
           <div>
             <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyecto">
             <h4>50 Day 50 Proyectos</h4>
           </div>
         </picture>
         <picture>
-          <img class="proyecto_img" src="/IMG/proyectos/Gato_App.png" alt="Proyecto Gato_App">
+          <img class="proyecto_img" src="./IMG/proyectos/Gato_App.png" alt="Proyecto Gato_App">
           <div>
             <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyecto">
             <h4>Gato App</h4>
           </div>
         </picture>
         <picture>
-          <img class="proyecto_img" src="/IMG/proyectos/Leo_Pelis.png" alt="Proyecto Leo_Pelis">
+          <img class="proyecto_img" src="./IMG/proyectos/Leo_Pelis.png" alt="Proyecto Leo_Pelis">
           <div>
             <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyecto">
             <h4>Leo Pelis</h4>
           </div>
         </picture>
         <picture>
-          <img class="proyecto_img" src="/IMG/proyectos/My_App_Day.png" alt="Proyecto My_App_Day">
+          <img class="proyecto_img" src="./IMG/proyectos/My_App_Day.png" alt="Proyecto My_App_Day">
           <div>
             <img src="./IMG/Iconos/Proyectos_Blanco.png" alt="Icono de Proyecto">
             <h4>My Day App</h4>
@@ -164,9 +164,9 @@
             Comuncación Visual
           </p>
           <picture>
-            <img src="/IMG/Iconos/instagram.png" alt="Link a Instagram de Leonardo Dillon">
+            <img src="./IMG/Iconos/instagram.png" alt="Link a Instagram de Leonardo Dillon">
             <a href="https://github.com/leo-dillon">
-              <img src="/IMG/Iconos/github.png" alt="Link a GitHub de Leonardo Dillon">
+              <img src="./IMG/Iconos/github.png" alt="Link a GitHub de Leonardo Dillon">
             </a>
           </picture>
         </div>
